Change CmakeLists.txt and minor changes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,7 +9,7 @@ set(CMAKE_AUTORCC ON)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Core)
+find_package(QT NAMES Qt6 REQUIRED COMPONENTS Widgets Core)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Core)
 find_library(PCAP_LIB pcap  REQUIRED)
 find_package(nlohmann_json REQUIRED)
@@ -25,15 +25,13 @@ set(PROJECT_SOURCES
         secondmainwindow.ui
 )
 
-if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
-
 qt_add_executable(my_IDS
         MANUAL_FINALIZATION
         ${PROJECT_SOURCES}
         threatdetector.h threatdetector.cpp
         basehandler.h basehandler.cpp
         ethernethandler.h ethernethandler.cpp
-        loopbackhandler.h loopbackhandler.cpp
+        # loopbackhandler.h loopbackhandler.cpp
         ethernetheader.h ethernetheader.cpp
         icmpheader.h icmpheader.cpp
         ipv4header.h ipv4header.cpp
@@ -41,23 +39,7 @@ qt_add_executable(my_IDS
         udpheader.h udpheader.cpp
         packetworker.h packetworker.cpp
     )
-# Define target properties for Android with Qt 6 as:
-#    set_property(TARGET my_IDS APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
-#                 ${CMAKE_CURRENT_SOURCE_DIR}/android)
-# For more information, see https://doc.qt.io/qt-6/qt-add-executable.html#target-creation
-else()
-    if(ANDROID)
-        add_library(my_IDS SHARED
-            ${PROJECT_SOURCES}
-        )
-# Define properties for Android with Qt 5 after find_package() calls as:
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-    else()
-        add_executable(my_IDS
-            ${PROJECT_SOURCES}
-        )
-    endif()
-endif()
+
 
 target_link_libraries(my_IDS PRIVATE
     Qt${QT_VERSION_MAJOR}::Widgets
@@ -65,8 +47,6 @@ target_link_libraries(my_IDS PRIVATE
     ${PCAP_LIB}
     nlohmann_json::nlohmann_json
 )
-target_include_directories(my_IDS PRIVATE ${CMAKE_SOURCE_DIR}/external/termcolor)
-
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
